--- a/assets/less/base/_header.less
+++ b/assets/less/base/_header.less
@@ -125,7 +125,7 @@
                 &__nav{
                     ul{
                         position: fixed;
-                        min-width: 100%;
+                        max-width: 100%;
                         max-height: 100%;
                         background-color: @greynav;
                         top: 14%;
