--- a/assets/less/content/blog_content.less
+++ b/assets/less/content/blog_content.less
@@ -30,6 +30,9 @@
    }
    .carousel{
       margin-top: 6%;
+      .slick-next{
+         right:0;
+      }
    }
    &__content:nth-child(2){
       margin: 0 28px;
@@ -97,6 +100,12 @@
       .title{
          .blog--line{
             display: none;
+         }
+      }
+      .carousel{
+         .row{
+            max-width: 100%;
+            margin: 0;
          }
       }
       &__content{
