--- a/assets/less/content/home_page_content.less
+++ b/assets/less/content/home_page_content.less
@@ -170,36 +170,46 @@
     
 }
 @media all  and (max-width: 992px){
+   
     .banner{
+        .row{
+            max-width: 100%;
+            margin: 0;
+        }
         &__img{
             &__left{
                 &__content{
                     top:59.5%;
                     h2{
-                        font-size: 40px;
+                        font-size: 30px;
                     }
                     .btn-shop{
                         font-size: 20px;
+                        margin-left: 30%;
                     }
                 }
             }
             &__right{
                 .right--img{
-                    flex-direction: row;
-                    justify-content: space-around;
+                   
+                   
                     margin-top: 1%;
                 }
                 &--top{
                     max-height: 100%;
                     img{
-                        min-height: 96%;
+                        height: 100%;
                         width: 100%;
                     }
                 }
                 &--bottom{
+                    img{
+                        width: 100%;
+                    }
                     &__title{
-                        top: 40%;
-                        left: 60%;
+                        top: 55%;
+                        left: 15%;
+                    
                     }
                 }
             }
@@ -209,12 +219,32 @@
         &__title{
             margin-left: 3%;
         }
+        &__list1,&__list2{
+            .row{
+                max-width: 100%;
+                margin: 0;
+            }
+        }
         &__content{
             &__detail{
                 &__price{
                     .price--old__line{
                         width: 10%;
                         top:93.3%;
+                    }
+                }
+            }
+        }
+    }
+}
+@media all and (max-width:768px){
+    .banner{
+        &__img{
+            &__right{
+                &--bottom{
+                    img{
+                        min-width: 100%;
+                        max-height: 95%;
                     }
                 }
             }
@@ -248,6 +278,57 @@
                     &__title{
                         top: 50%;
                         left: 20%;
+                    }
+                }
+            }
+        }
+    }
+}
+@media all and (max-width: 376px){
+    .banner{
+        &__img{
+            &__left{
+                &__content{
+                    h2{
+                        font-size: 19px;
+                    }
+                    .btn-shop{
+                        font-size: 10px;
+                        margin-left: 28%;
+                    }
+                }
+            }
+            &__right{
+                &--top{
+                    width: 100%;
+                    &__title{
+                        h3{
+                            font-size: 14px;
+                        }
+                        h2{
+                            font-size: 15px;
+                        }
+                    }
+                }
+                &--bottom{
+                    width: 100%;
+                    img{
+                        width: 100%;
+                        max-height: 70%;
+                    }
+                    &__title{
+                        top: 50%;
+                        left: 20%;
+                        h3{
+                            font-size: 14px;
+                        }
+                        h2{
+                            font-size: 15px;
+                        }
+                        .btn-shop--bottom{
+                            font-size: 10px;
+                            margin: 0;
+                        }
                     }
                 }
             }
