--- a/assets/less/base/_header.less
+++ b/assets/less/base/_header.less
@@ -13,6 +13,9 @@
                 &--left{
                     float: left;
                     width: 50%;
+                    .space{
+                        margin: 0 2.5px 0 8px;
+                    }
                     span{
                         margin: 0 2.5px;
                         letter-spacing: -0.5px;
@@ -60,13 +63,17 @@
                         font-size: 14px;
                         list-style: none;
                         display: inline-block;
-                        margin: 0px 2%;
+                        margin: 0px 2.05%;
                         text-transform: uppercase;
-                        word-spacing: -1px;
+                        a{
+                            color: @black;
+                        }
+                        a:hover{
+                            color: @text-color;
+                            text-decoration: none;
+                        }
                     }
-                    li:hover{
-                        color: @text-color;
-                    }
+                    
                   
                    
                   
@@ -75,9 +82,11 @@
             }
             &__cart{
                 text-align: right;
+                font-size: 26px;
                 span .reaction{
-                    margin-right: 9%;
+                    margin-right: 8%;
                 }
+
             }
             #menu-bar{
                 display: none;
@@ -86,7 +95,7 @@
     }
 }
 
-@media only screen and (min-width: 992px) and (max-width: 1200px){
+@media only screen and (min-width: 1024px) and (max-width: 1200px){
   .header{
       .container-fluid{
           .header__mainmenu{
@@ -109,7 +118,7 @@
      
   }
 }
-@media all  and (max-width: 992px){
+@media all  and (max-width: 1024px){
     .header{
         .container-fluid{
             .header__mainmenu{
@@ -169,9 +178,6 @@
             }
         }
     }
-}
-@media all and (max-width: 576px){
-
 }
 
 
