--- a/assets/less/content/blog_content.less
+++ b/assets/less/content/blog_content.less
@@ -33,6 +33,23 @@
       .slick-next{
          right:0;
       }
+      .slick-dots {
+         margin:-2% 0;
+         li{
+            transform: scale(2);
+            margin:0 1px;
+            button:before{
+               color: @text-color;
+            }
+         }
+         li.slick-active {
+            button:before{
+               color: @text-color;
+               transform: scale(1.3);
+            }
+           
+         }
+      }
    }
    &__content:nth-child(2){
       margin: 0 28px;
@@ -46,8 +63,7 @@
          .date--now{
             height: 50px;
             width: 50px;
-            border-left: 1px white solid;
-            border-top: 1px white solid;
+          border: 1px solid @white;
             position: absolute;
             top: 9%;
             left: 9%;
@@ -76,12 +92,24 @@
          }
          h6{
             font-size: 15px;
+            a{
+               color: @black;
+              
+            }
+            a:hover{
+               text-decoration: none;
+               color: @text-color;
+            }
          }
          .reaction{
-            margin-top: 10%;
+            margin-top: 9%;
             span{
-               font-size: 16px;
-               margin-right: 30px;
+               color: #cdcdcd;
+               font-size: 15px;
+               margin-right: 15px;
+               span{             
+               margin-left: 2px;
+               }
             
             }
          }
@@ -95,7 +123,7 @@
       }
    }
 }
-@media all and (max-width: 992px){
+@media all and (max-width: 1024px){
    .blog{
       .title{
          .blog--line{
