--- a/assets/less/content/home_page_content.less
+++ b/assets/less/content/home_page_content.less
@@ -1,8 +1,8 @@
 // /*<-----------------------------------3.1 Home_page_content--------------------------------------------->*/
 .container{
     width: 100%;
-    max-width: 1140px;
-    padding: 0;
+    max-width: 1170px;
+   
 }
 .banner{
     &__img{
@@ -18,6 +18,7 @@
                 line-height: 52px;
                 h2{
                     font-family: @font-pacifico;
+                    font-weight: 900;
                 }
                 .btn-shop{
                     color: white;
@@ -50,8 +51,6 @@
                     }
                     h2{
                         font-size: 20px;
-                        letter-spacing: 1.4px;
-                        font-family: @font-openSan;
                         font-weight: 900;
                     }
                 }
@@ -68,8 +67,7 @@
                     }
                     h2{
                         font-size: 21px;
-                        letter-spacing: 0.5px;
-                        font-family: @font-openSan;
+                        letter-spacing: -1.5px;
                         font-weight: 900;
                     }
                     .btn-shop--bottom{
@@ -115,6 +113,14 @@
     &__content{
             &__detail{
                 padding: 7% 0;
+                h6{
+                    a{
+                        color: @black;
+                    }
+                    a:hover{
+                        color: @text-color;
+                    }
+                }
                 .card-title{
                     letter-spacing: -0.8px;
                     font-weight: 700;
@@ -169,7 +175,16 @@
     }     
     
 }
-@media all  and (max-width: 992px){
+@media all and(min-width:1025px){
+    .banner{
+        &__img{
+            &__right1{
+                display: none;
+            }
+        }
+    }
+}
+@media all  and (max-width: 1024px){
    
     .banner{
         .row{
@@ -188,6 +203,9 @@
                         margin-left: 30%;
                     }
                 }
+            }
+            &__right1{
+                display: none;
             }
             &__right{
                 .right--img{
@@ -216,6 +234,10 @@
         }
     }
     .product{
+        .card-img-overlay{
+            top: 52.5%;
+             left: 0.5%;
+        }
         &__title{
             margin-left: 3%;
         }
@@ -229,8 +251,49 @@
             &__detail{
                 &__price{
                     .price--old__line{
-                        width: 10%;
-                        top:93.3%;
+                        width: 20%;
+                         top: 91.3%;
+                    }
+                }
+            }
+        }
+    }
+}
+@media all and (max-width:812px){
+    .banner{
+        .row{
+            max-width: 100%;
+            margin: 0;
+        }
+        &__img{
+            &__left{
+                &__content{
+                    top:59.5%;
+                    h2{
+                        font-size: 30px;
+                    }
+                    .btn-shop{
+                        font-size: 20px;
+                        margin-left: 30%;
+                    }
+                }
+            }
+            &__right1{
+                margin-top: 3%;
+                display: block;
+            }
+            &__right{
+               display: none;
+            }
+        }
+    }
+    .product{
+        &__content{
+            &__detail{
+                &__price{
+                    .price--old__line{
+                        width: 13%;
+                        top: 92.7%;
                     }
                 }
             }
@@ -241,17 +304,33 @@
     .banner{
         &__img{
             &__right{
-                &--bottom{
-                    img{
-                        min-width: 100%;
-                        max-height: 95%;
+               display: none;
+            }
+            &__right1{
+                display: block;
+                margin-top:3%;
+            }
+        }
+
+    }
+    .product{
+        .card-img-overlay{
+            top: 61.5%;
+            left: 0.5%;
+        }
+        &__content{
+            &__detail{
+                &__price{
+                    .price--old__line{
+                        width: 13%;
+                        top: 92.7%;
                     }
                 }
             }
         }
     }
 }
-@media all and (max-width: 576px){
+@media all and (max-width: 600px){
     .banner{
         &__img{
             &__left{
@@ -265,7 +344,11 @@
                     }
                 }
             }
+            &__right1{
+                display: none;
+            }
             &__right{
+                display: block;
                 &--top{
                     width: 100%;
                 }
@@ -283,6 +366,19 @@
             }
         }
     }
+    .product{
+      
+        &__content{
+            &__detail{
+                &__price{
+                    .price--old__line{
+                        width: 9%;
+                         top: 93.5%;
+                    }
+                }
+            }
+        }
+    }
 }
 @media all and (max-width: 376px){
     .banner{
@@ -290,7 +386,7 @@
             &__left{
                 &__content{
                     h2{
-                        font-size: 19px;
+                        font-size: 16px;
                     }
                     .btn-shop{
                         font-size: 10px;
@@ -303,10 +399,10 @@
                     width: 100%;
                     &__title{
                         h3{
-                            font-size: 14px;
+                            font-size: 12px;
                         }
                         h2{
-                            font-size: 15px;
+                            font-size: 14px;
                         }
                     }
                 }
@@ -320,15 +416,27 @@
                         top: 50%;
                         left: 20%;
                         h3{
-                            font-size: 14px;
+                            font-size: 12px;
                         }
                         h2{
-                            font-size: 15px;
+                            font-size: 14px;
                         }
                         .btn-shop--bottom{
                             font-size: 10px;
                             margin: 0;
                         }
+                    }
+                }
+            }
+        }
+    }
+    .product{
+        &__content{
+            &__detail{
+                &__price{
+                    .price--old__line{
+                        width: 15%;
+                        top: 92.5%;
                     }
                 }
             }
