--- a/assets/less/base/_footer.less
+++ b/assets/less/base/_footer.less
@@ -40,7 +40,7 @@
         &__icon {
           ul{
                 list-style: none;
-                margin: 7.8% 0px;   
+                margin-top: 7.8% ;   
                 li{
                     display: inline-block;
                     margin: 0px 14px;
@@ -95,7 +95,7 @@
                 }
                 .active{
                     color:@white;
-                    text-decoration: revert;
+                  
                 }
                
             }
@@ -163,7 +163,7 @@
     &--bottom{
         
         color: grey;
-        padding-top: 2.2%;
+        padding-top: 3.2%;
         font-size: 14px;
         width: 100%;
         address{
