--- a/assets/less/base/_footer.less
+++ b/assets/less/base/_footer.less
@@ -20,11 +20,11 @@
         &__title h4{
             font-size: 17px;
             font-weight: 700;
-            color: white;
+            color: @white;
             margin-left: -3px;
         }
         .line1{
-            border-bottom: 1px #393939 solid;
+            border-bottom: 1px @line-color solid;
             margin-top: 26px;
             width: 90%;
         }
@@ -35,7 +35,7 @@
             line-height: 22px;
             word-spacing: 2px;
             width: 71%;
-            color: #888888;
+            color: @footer-color;
         }
         &__icon {
           ul{
@@ -46,7 +46,7 @@
                     margin: 0px 14px;
                     padding: 13px 0px;
                     a{
-                        color: #888888;
+                        color: @footer-color;
                     }
                     a:hover{
                         color: @white;
@@ -67,7 +67,7 @@
             margin-left: -3px;
         }
         .line2{
-            border-bottom: 1px #393939 solid;
+            border-bottom: 1px @line-color solid;
             margin-top: 26px;
             width: 79%;
         }
@@ -87,7 +87,7 @@
                 font-size: 13px;
                 line-height: 30px;
                 a{
-                    color: #888888;
+                    color: @footer-color;
                 }
                 a:hover{
                     color: @white;
@@ -110,7 +110,7 @@
             margin-left:-3px ;
         }
         .line3{
-            border-bottom: 1px #393939 solid;
+            border-bottom: 1px @line-color solid;
             margin-top: 26px;
             width: 100%;
         }
@@ -122,7 +122,7 @@
             li {
                 list-style: none;
                 a{
-                    color: #888888;
+                    color: @footer-color;
                 }
                 a:hover{
                     color: @white;
@@ -176,7 +176,7 @@
                 margin-top: -7px;
                 a{
 
-                    color: #888888;
+                    color: @footer-color;
                 }
                 a:hover{
                     color: @white;
