--- a/assets/less/common/configskin/_skin.less
+++ b/assets/less/common/configskin/_skin.less
@@ -13,5 +13,9 @@
 @star:#d4d4d4;
 @greynav:#dddddd;
 @white:#fff;
+@white2:#d4d4d4;
+@footer-color:#888888;
+@line-color:#393939;
 @date-color:#a1d1dd;
 @price:#999;
+@grey2:#cdcdcd;
