--- a/assets/less/content/_home_page_content.less
+++ b/assets/less/content/_home_page_content.less
@@ -134,7 +134,7 @@
                     color: @yellow;
                     word-spacing: -2px;
                     .star--final{
-                       color:#d4d4d4;
+                       color:@white2;
                     }
                 }
                 &__price{
