--- a/assets/less/content/_blog_content.less
+++ b/assets/less/content/_blog_content.less
@@ -104,7 +104,7 @@
          .reaction{
             margin-top: 9%;
             span{
-               color: #cdcdcd;
+               color:@grey2;
                font-size: 15px;
                margin-right: 15px;
                span{             
