--- a/assets/less/content/_home_page_content.less
+++ b/assets/less/content/_home_page_content.less
@@ -10,6 +10,9 @@
         position: relative;
         padding-top: 2.6%;
         &__left{
+            img{
+                width: 100%;
+            }
             &__content{
                 position: absolute;
                 top: 56.5%;
@@ -175,6 +178,9 @@
                 font-weight: 600;
                 word-spacing: -0.5px;
              
+            }
+            .add-to-cart:hover{
+                color: @text-color;
             }
         }     
     }
