--- a/assets/less/base/_footer.less
+++ b/assets/less/base/_footer.less
@@ -170,6 +170,12 @@
         width: 100%;
         address{
             word-spacing: -0.5px; 
+            .heart{
+                color: @red;
+            }
+            a{
+                color: @white;
+            }
         }
         &__payment{
             text-align: right;
