--- a/assets/less/content/_home_page_content.less
+++ b/assets/less/content/_home_page_content.less
@@ -109,6 +109,7 @@
     }
     &__list1{
         margin-top: 4.5%;
+
     }
     &__list2{
         margin-top: 2%;
@@ -158,6 +159,9 @@
                         font-weight: bold;
                     }         
                 }
+            }
+            img{
+                width: 100%;
             }
     }
     .card{
