--- a/assets/less/content/_blog_content.less
+++ b/assets/less/content/_blog_content.less
@@ -56,6 +56,9 @@
    }
    &__content{
       height: 396px;
+      img{
+         width: 100%;
+      }
       &__date{
          height: 60px;
          width: 61px;
