--- a/assets/less/content/_home_page_content.less
+++ b/assets/less/content/_home_page_content.less
@@ -169,6 +169,9 @@
     }
     .card-img-top{
         position: relative;
+        img{
+            width: 100%;
+        }
         .card-img-overlayy{
             position:absolute;
             padding:0.3rem;
